--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">TopK</string>
     <string name="timeout">Esgotado tempo limite para resposta</string>
-    <string name="unauthorized">Acesso nao autorizado</string>
-    <string name="not_found">Recurso nao encontrado</string>
+    <string name="unauthorized">Acesso não autorizado</string>
+    <string name="not_found">Recurso não encontrado</string>
     <string name="internal_server_error">Erro interno no servidor</string>
     <string name="service_unavailable">Serviço indisponivel</string>
     <string name="unexpected_error">Erro inesperado</string>
@@ -17,5 +17,5 @@
     <string name="cd_imageStars">Estrelas</string>
     <string name="cd_forks">Forks</string>
     <string name="cd_issues">Issues</string>
-    <string name="label_repolist_fragment">Repositórios Kotlin</string>
+    <string name="label_repolist_fragment">Top repositórios Kotlin</string>
 </resources>
